# auditagent

./: .gitignore  ARCHITECTURE.md  CASE_STUDY_n102_wobble.md  Dockerfile  HANDOFF_AuditAgent_GateFix_COMPLETE.md  HANDOFF_TO_CLAUDE_CODE.md  Makefile  README.md  RUN_DEFINITION_GATE.md  RUN_DEPLOY.md  RUN_FULL_EVAL.md  RUN_REAL_EVAL.md  SESSION_RECAP_2026-06-15.md  SESSION_SUMMARY_GateFix_12Jun2026.md  SESSION_SUMMARY_SiteIntegration_15Jun2026.md  demo.py  demo_m2.py  eval_deepseek.json  eval_deepseek_full_PREFIX_run1.json  eval_deepseek_full_PREFIX_run2.json  eval_deepseek_full_run2.json  eval_deepseek_full_run2.md  eval_deepseek_run1.md  eval_deepseek_run2.json  eval_deepseek_run2.md  eval_report.json  eval_report.md  eval_run2.json  eval_run2.md  pyproject.toml
.github/workflows/: eval.yml
ab_results/flash_OFF/: eval_deepseek_full_run1.json  eval_deepseek_full_run1.md  eval_deepseek_full_run2.json  eval_deepseek_full_run2.md
ab_results/flash_ON/: eval_deepseek_full_run1.json  eval_deepseek_full_run1.md  eval_deepseek_full_run2.md
ab_results/full_OFF/: eval_deepseek_full_run1.json  eval_deepseek_full_run1.md
ab_results/pro_OFF/: eval_deepseek_full_run2.json
ab_results/pro_ON/: eval_deepseek_full_run1.json  eval_deepseek_full_run1.md
ab_results/sample_OFF/: eval_deepseek_run1.json  eval_deepseek_run1.md  eval_deepseek_run2.json  eval_deepseek_run2.md
ab_results/sample_ON/: eval_deepseek_run1.json  eval_deepseek_run1.md  eval_deepseek_run2.json  eval_deepseek_run2.md
rebaseline/: REBASELINE_SUMMARY.json  REBASELINE_SUMMARY.md  run1.json  run1.md  run2.json  run2.md  run3.json  run3.md
scripts/: benchmark_twice.sh  diff_gate_ab.py  download_cuad.py  dry_run_demo.py  rebaseline.sh
src/auditagent/: __init__.py  anchor.py  app.py  audit_log.py  checklist.py  checkpointer.py  chunker.py  clauses.py  demo_gallery.py  graph.py  injection.py  mcp_server.py  models.py  parser.py  pipeline.py  security.py  sessions.py  tracing.py
src/auditagent/agents/: __init__.py  classifier.py  definition_gate.py  extractor.py  reviewer.py  risk_analyzer.py
src/auditagent/data/: __init__.py  sample_contract.txt  (+1 more)
tests/: test_anchor.py  test_chunker.py  test_citation_gate.py  test_clause_definitions.py  test_deepseek_parse.py  test_definition_gate.py  test_demo_gallery.py  test_demo_numbers.py  test_eval_threeway.py  test_factory_override.py  test_injection_and_checklist.py  test_integration_realmodel.py  test_model_override.py  test_models.py  test_parser.py  test_pipeline.py  test_postgres_backend.py  test_reviewer_loop.py  test_scorer.py  test_security.py  test_sessions.py  test_tracing.py
(+14 files in other folders)
