[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auditagent"
version = "0.3.0"
description = "Autonomous contract-review & risk-flagging agent — citation-anchored, eval-measured. M1–M3 complete (offset-exact parsing, agentic citation gate, CUAD eval harness); M4 production-hardening in progress."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Taashira Chikosi", email = "taashira.chikosi@gmail.com" }]
dependencies = [
    "pydantic>=2.6",
    "fastmcp>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.11"]
docx = ["python-docx>=1.1"]
# M4 production-hardening (all opt-in; the package runs fully without them):
#   postgres → durable audit log + LangGraph checkpointer + HITL session store
#   tracing  → Langfuse observability (a no-op shim is used when absent)
postgres = ["psycopg[binary]>=3.1", "langgraph-checkpoint-postgres>=2.0"]
tracing = ["langfuse>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27"]

[project.scripts]
auditagent-mcp = "auditagent.mcp_server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src/auditagent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
